--- a/exp_7_DL.ipynb
+++ b/exp_7_DL.ipynb
@@ -245,8 +245,8 @@
         "    noisy_images = noisy_images.cpu().numpy()\n",
         "    outputs = outputs.cpu().numpy()\n",
         "\n",
-        "    print(\"Name: Yogeshvar M\")\n",
-        "    print(\"Register Number: 212222230180\")\n",
+        "    print(\"Name: LEANN JOBY MATHEW\")\n",
+        "    print(\"Register Number: 212222230074\")\n",
         "    plt.figure(figsize=(18, 6))\n",
         "    for i in range(num_images):\n",
         "        # Original\n",
